# WindowMaster

./: .gitattributes  .gitignore  LICENSE.txt  README.md  fp-lib-table  windowmaster.kicad_pcb  windowmaster.pro
case/: .gitignore  README.md  bottom-plate.scad  case.FCStd  case.scad  plate.scad  top-plate.scad  windowmaster.stl
firmware/: .gitignore  Cargo.toml  README.md  memory.x
firmware/src/: button.rs  channel.rs  encoder.rs  indicator.rs  led.rs  lib.rs  link.rs  main.rs  switch.rs  system.rs
host-controller/: .gitignore  Cargo.toml  LICENSE.txt  README.md  build.rs
host-controller/src/: audio.rs  bigraph.rs  control.rs  core.rs  hid.rs  lib.rs  main.rs  manager.rs
host-controller/src/backend/: mod.rs
host-controller/src/backend/hidapi/: control.rs  mod.rs
host-controller/src/backend/windows/: audio.rs  mod.rs
host-controller/src/windows_backend/: audio.rs  control.rs  mod.rs
pcb/: .gitignore  README.md  channel.sch  windowmaster.kicad_pcb  windowmaster.net  windowmaster.pro  windowmaster.sch  windowmaster.step
pcb/fab/rev1/: windowmaster-rev1-bom-jlcpcb.csv  windowmaster-top-pos.csv
pcb/snap_eda/: HRO_TYPE-C-31-M-12.kicad_mod  TYPE-C-31-M-12.step  pec11r-4015f-s0024.stp
pcb/windowmaster.pretty/: HRO_TYPE-C-31-M-12.kicad_mod  MJTP1117.kicad_mod  Rotary_Encoder_Switched_PEC11R.kicad_mod  TL3342F160QG.kicad_mod  TYPEC-304S-ACP16.kicad_mod
snap_eda/: LICENSE.txt
windowmaster.pretty/: MJTP1117.kicad_mod
