[package]
publish = false
name = "windowmaster-firmware"
version = "0.1.0"
authors = ["Adam Gausmann <agausmann@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.38", default-features = false }
alloc-cortex-m = "0.4.1"
cortex-m = "0.7.1"
cortex-m-rt = "0.6.13"
embedded-hal = "0.2.4"
stm32f0xx-hal = { version = "0.17.1", features = ["stm32f072", "stm32-usbd"] }
stm32-usbd = { version = "0.5.1", features = ["ram_access_2x16"] }
usb-device = "0.2.7"
usbd-hid = "0.4.5"

[dev-dependencies]
embedded-hal-mock = "0.7.2"

[profile.dev]
opt-level = 'z'
lto = true

[profile.release]
opt-level = 'z'
lto = true
