[package]
name = "windowmaster"
version = "0.1.0"
authors = ["Adam Gausmann <agausmann@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
widestring = "0.4.3"
windows = "0.4.0"

[build-dependencies]
windows = "0.4.0"