[package]
name = "windowmaster"
version = "0.1.0"
authors = ["Adam Gausmann <agausmann@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bimap = "0.6"
bytemuck = { version = "1.7", features = ["derive"] }
env_logger = "0.9"
hidapi = "1.2"
log = "0.4"
once_cell = "1.8"
petgraph = "0.6"
smol = "1.2"
widestring = "0.4"
windows = "0.19"

[build-dependencies]
windows = "0.19"